# openssl-crypto-android

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/erlei/myapplication/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/erlei/myapplication/: MainActivity.java
app/src/test/java/com/erlei/myapplication/: ExampleUnitTest.java
crypto-aes/: CMakeLists.txt  build.gradle
crypto-aes/src/androidTest/java/com/erlei/crypto/: ExampleInstrumentedTest.java
crypto-aes/src/main/: AndroidManifest.xml
crypto-aes/src/main/cpp/: aes.h  aes_core.c  aes_x86core.c  modes.h  modes_int.h
crypto-aes/src/main/cpp/aes/: aes_cbc.c  aes_cfb.c  aes_ecb.c  aes_ige.c  aes_locl.h  aes_misc.c  aes_ofb.c
crypto-aes/src/main/cpp/modes/: cbc128.c  ccm128.c  cfb128.c  ctr128.c  cts128.c  ofb128.c  xts128.c
crypto-aes/src/main/res/values/: strings.xml
crypto-aes/src/test/java/com/erlei/crypto/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
